--- a/src/app/clientes/clientes-form/clientes-form.component.html
+++ b/src/app/clientes/clientes-form/clientes-form.component.html
@@ -3,6 +3,7 @@
   <li class="breadcrumb-item active">Cadastro</li>
 </ol>
 <div class="container">
+
   <form>
     <div class="row">
       <div class="col-md-6">
@@ -22,19 +23,19 @@
       <div class="col-md-6">
         <div class="form-grup">
           <label>Nome: *</label>
-          <input type="text" class="form-control"/>
+          <input type="text" class="form-control" [(ngModel)]="nome"/>
         </div>
       </div>
         <div class="col-md-6">
         <div class="form-grup">
           <label>CPF: *</label>
-          <input type="text" class="form-control"/>
+          <input type="text" class="form-control" value="{{ cliente.cpf }}"/>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-md-2">
-        <button type="submit" class="btn btn-success">
+        <button type="submit" class="btn btn-success" (click)="clicar()">
           <i class="fa fa-save"></i> Salvar
         </button>
       </div>
