--- a/src/styles.css
+++ b/src/styles.css
@@ -2515,6 +2515,8 @@ fieldset:disabled a.btn {
 }
 
 .btn-success {
+  margin-top: 15px;
+  margin-bottom: 15px;
   color: #fff;
   background-color: #28a745;
   border-color: #28a745;
