--- a/src/app/clientes/clientes-form/clientes-form.component.html
+++ b/src/app/clientes/clientes-form/clientes-form.component.html
@@ -14,14 +14,14 @@
         </div>
       </div>
     </div>
-    <div class="row" *ngIf="cliente.id">
+    <div class="row" *ngIf="id">
       <div class="col-md-6">
         <div class="form-grup">
           <label>ID:</label>
           <input
             type="text"
             class="form-control"
-            [ngModel]="cliente.id"
+            [ngModel]="id"
             name="id"
             disabled="true"
           />
@@ -33,7 +33,7 @@
           <input
             type="text"
             class="form-control"
-            [ngModel]="cliente.dataCadastro"
+            [ngModel]="date"
             name="dataCadastro"
             disabled="true"
           />
