--- a/src/app/clientes/clientes-form/clientes-form.component.html
+++ b/src/app/clientes/clientes-form/clientes-form.component.html
@@ -9,7 +9,11 @@
         <div class="alert alert-success" role="alert" *ngIf="success == true">
           Cliente salvo/atualizado com sucesso!
         </div>
-        <div class="alert alert-danger" role="alert" *ngFor="let erro of errors">
+        <div
+          class="alert alert-danger"
+          role="alert"
+          *ngFor="let erro of errors"
+        >
           {{ erro }}
         </div>
       </div>
@@ -60,6 +64,19 @@
             class="form-control"
             [(ngModel)]="cliente.cpf"
             name="cpf"
+          />
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="form-grup">
+          <label>Email: *</label>
+          <input
+            type="text"
+            class="form-control"
+            [(ngModel)]="cliente.email"
+            name="nome"
           />
         </div>
       </div>
