Modal para deletar cliente

--- a/src/styles.css
+++ b/src/styles.css
@@ -2455,6 +2455,7 @@ fieldset:disabled a.btn {
 }
 
 .btn-primary {
+  margin-right: 5px;
   color: #fff;
   background-color: #007bff;
   border-color: #007bff;
