--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -10,16 +10,25 @@
           Home</a
         >
         <div class="sb-sidenav-menu-heading">Cadastros</div>
-        <a
-          class="nav-link collapsed"
+        <a class="nav-link collapsed"
           routerLink="/clientes-lista"
           data-toggle="collapse"
           data-target="#collapseLayouts"
           aria-expanded="false"
           aria-controls="collapseLayouts"
           ><div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
-          Clientes</a
-        >
+          Clientes
+        </a>
+
+        <a class="nav-link collapsed"
+          routerLink="/servico-prestado-from"
+          data-toggle="collapse"
+          data-target="#collapseLayouts"
+          aria-expanded="false"
+          aria-controls="collapseLayouts"
+          ><div class="sb-nav-link-icon"><i class="fas fa-money-bill"></i></div>
+          Serviços Prestados
+      </a>
       </div>
     </div>
     <div class="sb-sidenav-footer">
