--- a/src/app/servico-prestado/servico-prestado-form/servico-prestado-form.component.html
+++ b/src/app/servico-prestado/servico-prestado-form/servico-prestado-form.component.html
@@ -3,6 +3,19 @@
   <li class="breadcrumb-bitem active">Novo</li>
 </ol>
 <div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="alert alert-success" role="alert" *ngIf="success == true">
+        Serviço prestado salvo com sucesso!
+      </div>
+      <div
+        class="alert alert-danger"
+        role="alert"
+        *ngFor="let erro of errors">
+        {{ erro }}
+      </div>
+    </div>
+  </div>
   <form #form="ngForm" (submit)="onSubmit()">
     <div class="row">
       <div class="col-md-12">
