--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -21,7 +21,7 @@
         </a>
 
         <a class="nav-link collapsed"
-          routerLink="/servico-prestado-from"
+          routerLink="/servico-prestado-listagem"
           data-toggle="collapse"
           data-target="#collapseLayouts"
           aria-expanded="false"
