--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -21,14 +21,24 @@
         </a>
 
         <a class="nav-link collapsed"
-          routerLink="/servico-prestado-listagem"
+          routerLink="/servico-prestado-form"
           data-toggle="collapse"
           data-target="#collapseLayouts"
           aria-expanded="false"
           aria-controls="collapseLayouts"
           ><div class="sb-nav-link-icon"><i class="fas fa-money-bill"></i></div>
-          Serviços Prestados
-      </a>
+          Adicionar novo serviço prestado
+        </a>
+
+        <a class="nav-link collapsed"
+          routerLink="/servico-prestado-listagem"
+          data-toggle="collapse"
+          data-target="#collapseLayouts"
+          aria-expanded="false"
+          aria-controls="collapseLayouts"
+          ><div class="sb-nav-link-icon"><i class="fas fa-address-card"></i></div>
+          Pesquisar serviços prestados
+        </a>
       </div>
     </div>
     <div class="sb-sidenav-footer">
