--- a/src/app/servico-prestado/servico-prestado-lista/servico-prestado-lista.component.html
+++ b/src/app/servico-prestado/servico-prestado-lista/servico-prestado-lista.component.html
@@ -31,6 +31,9 @@
         <button type="submit" class="btn btn-primary">
           <i class="fa fa-search"></i>Consultar
         </button>
+        <button type="button" class="btn btn-warning" routerLink="/servico-prestado-form">
+          <i class="fa fa-plus"></i>Novo
+        </button>
       </div>
     </div>
   </form>
