--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -26,19 +26,9 @@
           data-target="#collapseLayouts"
           aria-expanded="false"
           aria-controls="collapseLayouts"
-          ><div class="sb-nav-link-icon"><i class="fas fa-money-bill"></i></div>
-          Adicionar novo serviço prestado
-        </a>
-
-        <a class="nav-link collapsed"
-          routerLink="/servico-prestado-listagem"
-          data-toggle="collapse"
-          data-target="#collapseLayouts"
-          aria-expanded="false"
-          aria-controls="collapseLayouts"
           ><div class="sb-nav-link-icon"><i class="fas fa-address-card"></i></div>
-          Pesquisar serviços prestados
-        </a>
+          Serviços Prestados
+      </a>
       </div>
     </div>
     <div class="sb-sidenav-footer">
