--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -11,7 +11,7 @@
         >
         <div class="sb-sidenav-menu-heading">Cadastros</div>
         <a class="nav-link collapsed"
-          routerLink="/clientes-lista"
+          routerLink="/clientes"
           data-toggle="collapse"
           data-target="#collapseLayouts"
           aria-expanded="false"
@@ -21,7 +21,7 @@
         </a>
 
         <a class="nav-link collapsed"
-          routerLink="/servico-prestado-listagem"
+          routerLink="/servico-prestado/lista"
           data-toggle="collapse"
           data-target="#collapseLayouts"
           aria-expanded="false"
