--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,17 +11,20 @@
                 </h3>
               </div>
                 <div class="card-body">
-                  <div class="alert alert-danger" *ngIf="loginError">
-                    Usuario e/ou Senha incorreto(a).
+                  <div class="alert alert-success" *ngIf="mensagemSucesso">
+                    {{ mensagemSucesso }}
+                  </div>
+                  <div class="alert alert-danger" *ngFor="let erro of errors">
+                    {{ erro }}
                   </div>
 
-                  <form #loginForm="ngForm" (ngSubmit)="onSubmit()">
+                  <form #loginForm="ngForm" (submit)="onSubmit()">
                     <div class="form-group">
                       <label class="small mb-1">Usuário</label>
                       <input type="text" name="username"
                              [(ngModel)]="username"
                              class="form-control py-4"
-                             placeholder="Digite seu login"/>
+                             placeholder="{{ cadastrando ? 'Cadastre um login.' : 'Digite seu login.' }}"/>
                     </div>
 
                     <div class="form-group">
@@ -29,12 +32,12 @@
                       <input type="password" name="password"
                              [(ngModel)]="password"
                              class="form-control py-4"
-                             placeholder="Digite sua senha"/>
+                             placeholder="{{ cadastrando ? 'Cadastre uma senha.' : 'Digite sua senha.' }}"/>
                     </div>
 
                     <div class="form-group align-items-center justify-content-between mt-4 mb-0">
                       <button type="submit" class="btn btn-primary" *ngIf="!cadastrando">Entrar</button>
-                      <button type="button" class="btn btn-success" *ngIf="cadastrando">Cadastrar</button>
+                      <button type="button" class="btn btn-success" *ngIf="cadastrando" (click)="cadastrar()">Cadastrar</button>
                       <button type="button" class="btn btn-danger ml-1" *ngIf="cadastrando" (click)="cancelaCadastro()">Cancelar</button>
                     </div>
                   </form>
